*scikits_image-0.14.3 (07 Jan 2020)

  07 Jan 2020;  <chymera@gentoo.org> +scikits_image-0.14.3.ebuild,
  scikits_image-0.14.2.ebuild:
  sci-libs/scikits_image: version bump and Python 2.7 drop

*scikits_image-0.14.2 (26 Mar 2019)

  26 Mar 2019;  <chymera@gentoo.org> +metadata.xml,
  +scikits_image-0.14.2.ebuild:
  sci-libs/scikits_image: version bump 0.14.2  ahead of Gentoo Main